create all modals

--- a/next-episode-modal/index.html
+++ b/next-episode-modal/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="myModal" class="modal">
-    <div class="modal_content">
+<div id="nextEpisodeModal" class="nextEpisodeModal">
+    <div class="nextEpisodeModal_content">
         <span class="close_icon" id="closeModal">&times;</span>
-        <div class="modal_content__text">
+        <div class="nextEpisodeModal_content__text">
             <div class="modal_container">
                 <p class="content_text text_white">Следующая</p>
                 <div class="content_text_wrapper">
