--- a/recommendation-modal/index.html
+++ b/recommendation-modal/index.html
@@ -12,25 +12,46 @@
         <span class="close_icon" id="closeModal">&times;</span>
         <div class="modal_content__text">
             <div class="content_text__box">
-                <div class="images_container first_image">
-                    <img class="circle_icon" src="./images/circle_icon.png" alt="circle_icon">
-                    <img class="ring_icon" src="./images/ring_icon.png" alt="ring_icon">
-                </div>
-                <p class="content_text">Оповестим о выходе нового сезона</p>
+                <span class="content_text">
+                    <div class="emptyBlock">
+                        <div class="images_container first_image">
+                            <img class="circle_icon" src="./images/circle_icon.png"
+                                 alt="circle_icon">
+                            <img class="ring_icon" src="./images/ring_icon.png"
+                                 alt="ring_icon">
+                        </div>
+                    </div>
+                    <span class="for-big-screen">Оповестим о выходе<br/>нового сезона</span>
+                    <span class="for-small-screen">Оповестим<br/>о выходе<br/>нового
+                        сезона</span>
+                </span>
             </div>
             <div class="content_text__box">
-                <p class="content_text">Порекомендуем<br/>похожий сериал</p>
-                <div class="images_container second_image">
-                    <img class="circle_icon" src="./images/circle_icon.png" alt="circle_icon">
-                    <img class="ring_icon" src="./images/ring_icon.png" alt="ring_icon">
-                </div>
+                <span class="content_text">
+                    <div class="emptyBlock">
+                        <div class="images_container second_image">
+                            <img class="circle_icon" src="./images/circle_icon.png"
+                                 alt="circle_icon">
+                            <img class="ring_icon" src="./images/ring_icon.png"
+                                 alt="ring_icon">
+                        </div>
+                    </div>
+                    Порекомендуем<br/>похожий сериал
+                </span>
             </div>
             <div class="content_text__box">
-                <div class="images_container third_image">
-                    <img class="circle_icon" src="./images/circle_icon.png" alt="circle_icon">
-                    <img class="ring_icon" src="./images/ring_icon.png" alt="ring_icon">
-                </div>
-                <p class="content_text">Не пропустишь новинки</p>
+                <span class="content_text">
+                    <div class="emptyBlock">
+                        <div class="images_container third_image">
+                            <img class="circle_icon" src="./images/circle_icon.png"
+                                 alt="circle_icon">
+                            <img class="ring_icon" src="./images/ring_icon.png"
+                                 alt="ring_icon">
+                        </div>
+                    </div>
+                    <span class="for-big-screen">Не пропустишь новинки</span>
+                    <span class="for-small-screen">Не пропустишь<br/>новинки</span>
+                </span>
             </div>
         </div>
         <div class="telegram_btn">
